@@ -35,6 +35,9 @@ end
 if config['cucumber']
   if recipes.include? 'devise'
     after_bundler do
+      # Cucumber wants to test GET requests not DELETE requests for destroy_user_session_path
+      # (see https://github.com/RailsApps/rails3-devise-rspec-cucumber/issues/3)
+      gsub_file 'config/initializers/devise.rb', 'config.sign_out_via = :delete', 'config.sign_out_via = :get'
       say_wizard "Copying Cucumber scenarios from the rails3-devise-rspec-cucumber examples"
       begin
         # copy all the Cucumber scenario files from the rails3-devise-rspec-cucumber example app
