@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.0.11"
+  VERSION = "1.0.12"
 end
